src/test/deca/syntax/valid/max_pars_01.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    Erreur, integer overflow
//
// Historique:
//    cree le 04/01/2023

{

        int a = 99999999999999999999;

}