src/test/deca/syntax/invalid/ident_lex_01.deca
// Description:
//    tests de programme incorrect lexicalement
//
// Resultats:
//    Ligne 11: Erreur, identificateur incorrect (chiffre en tête)
//
//
// Historique:
//    cree le 04/01/2023

{
    12ab;
}